--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,19 @@
     <title>AdventuresInSmsLand</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+    <div class="container">
+
+      <div class="child">
+        <h2><strong>Welcome to</strong> </h2>
+        <h1>Adventures In SMS Land</h1>
+        <%= yield %>
+      </div>
+    </div>
 </html>
